--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <title>React Webpack Scaffold</title>
     <link href="/static/styles.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >
 </head>
 <body>
     <div id="root"></div>
